# pmk

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  PMK Terminal.bat  README.md  pmk.bat  pmk.py
api/: build.cmake  encoder.c  encoder.h  hallscan.c  hallscan.h  hallscan_config.h  hid_reports.c  hid_reports.h  keycodes.h  main.c  profiles.c  profiles.h
api/drivers/: nrf24l01.c  nrf24l01.h  ws2812.pio
api/features/socd/: socd.c  socd.h
api/lighting/: lighting.c  lighting.h
api/src/usb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
boards/example_60/: CMakeLists.txt  config.h  hallscan_keymap.h  keymap.c  layout.json
